<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/aboutbg"
    >

    <LinearLayout
        android:id="@+id/wrap_everything"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/about"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:text="@string/aboutusopen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/barak" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="11dp"
                    android:text="@string/barak" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tech" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/barakq" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lnkd" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:clickable="true"
                    android:text="@string/barakl" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="193dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/dor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dor" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tech" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dorq" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lnkd" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:clickable="true"
                    android:text="@string/dorl" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/noam" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noam" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tech" />

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noamq" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lnkd" />

                <TextView
                    android:id="@+id/noaml"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:clickable="true"
                    android:text="@string/noaml" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/puppy" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center" />

    </LinearLayout>

</ScrollView>