<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="Delete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/searchID" />

            <TextView
                android:id="@+id/historyID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/searchTerm" />

            <TextView
                android:id="@+id/historySearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <WebView
            android:id="@+id/historyMap"
            android:layout_width="match_parent"
            android:layout_height="300dp">

        </WebView>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="false"
            android:onClick="startSearch"
            android:text="@string/delete"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>